src/MiniLang/Tests/DriverTests/RuntimeTestRead.err
Runtime error:
No input available for 'read' statement at line 25, columns 5-15
